Fix authentication using JWT
